# AutoScript

./: CMakeLists.txt  main.c
src/: CharIterator.h  index.h  number.h  operation.h  parser.h  runner.h  token.h  tokenIterator.h  tokenList.h  tokenizer.h  utility.h
src/type/: Real.h  function.h  type.h  variable.h
